--- a/ui/aruni/aruni.css
+++ b/ui/aruni/aruni.css
@@ -187,9 +187,21 @@ legend {
 
 #message {
   margin: 3px;
-  padding: 3px 0 3px 24px;
-  border: 2px solid #000;
-  background: #fcaf3e url(../icons/16x16/message.png) left center no-repeat;
+  border-width: 2px;
+  border-style: solid;
+  padding: 3px 0 3px 20px;
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+#message.info {
+  border-color: #ff0;
+  background-color: #ffffc2;
+  background-image: url(../icons/16x16/message.png);
+}
+#message.error {
+ border-color: #f00;
+ background-color: #ffc2c2;
+ background-image: url(../icons/16x16/error.png);
 }
 
 #body {
