bo#380: Change the character size in the textarea: 1em => 1.4em

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -11,11 +11,18 @@ body {
 
 a img { border: 0; }
 
-select, input, textarea, button {
+select, input, button {
   color: #000;
   background-color: #fff;
   font-size: 1.0em;
 }
+
+textarea {
+  color: #000;
+  background-color: #fff;
+  font-size: 1.4em;
+}
+
 
 input {
   background-position: left center;
