--- a/tracker/ui/tracker.css
+++ b/tracker/ui/tracker.css
@@ -10,3 +10,12 @@
 .com {
   font-family: "Arial", "DejaVu Sans", sans-serif;
 }
+
+.tracker_product {
+  color: #CC0000;
+  font-style: italic;
+}
+
+.tracker_resource {
+  color: #0A4A0A;
+}
