--- a/tracker/ui/style.css
+++ b/tracker/ui/style.css
@@ -1,9 +1,9 @@
-.tracker_issue_comment_title {
+.tracker-issue-comment-title {
   background-color: #ddddff;
   font-weight: bold;
 }
 
-.tracker_select {
+.tracker-select {
   width: 97%;
 }
 
@@ -11,11 +11,11 @@
   font-family: "Arial", "DejaVu Sans", sans-serif;
 }
 
-.tracker_product {
+.tracker-product {
   color: #CC0000;
   font-style: italic;
 }
 
-.tracker_resource {
+.tracker-resource {
   color: #0A4A0A;
 }
