--- a/ui/gallery/style.css
+++ b/ui/gallery/style.css
@@ -49,10 +49,10 @@
   overflow: hidden;
 }
 
-#image_toolbar {
+#image-toolbar {
   margin: 0 0 6px 0;
 }
 
-#image_toolbar a {
+#image-toolbar a {
   margin: 6px;
 }
