--- a/ui/table/style.css
+++ b/ui/table/style.css
@@ -1,20 +1,20 @@
-.table_calendar div {
+.table-calendar div {
     cursor: default !important;
 }
 
-.table_calendar .button {
+.table-calendar .button {
     background: none !important;
 }
 
-.table_calendar .nav {
+.table-calendar .nav {
   background: #888a85 url(../calendar/menuarrow.gif) no-repeat 100% 100% !important;
 }
 
-.table_calendar thead .headrow { /* Row <TR> containing navigation buttons */
+.table-calendar thead .headrow { /* Row <TR> containing navigation buttons */
   background: #888a85 !important;
   color: #fff !important;
 }
 
-.table_calendar td {
+.table-calendar td {
     vertical-align: top;
 }
