--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -149,23 +149,26 @@ legend {
 
 /* Versionning views */
 
-#differ .diff{
+#differ span, #differ div {
   font-family: monospace;
-  font-size: 12px;
+  font-size: 1em;
   white-space: pre;
 }
-#differ .rem{
+
+#differ .rem {
   color: red;
 }
-#differ .add{
+
+#differ .add {
   color: green;
 }
-#differ .header{
-  background-color:#EDECE6;
-  border-color:#D9D8D1;
-  border-style:solid;
-  border-width:1px 0;
-  font-weight:bold;
+
+#differ div {
+  background-color: #EDECE6;
+  border-color: #D9D8D1;
+  border-style: solid;
+  border-width: 1px 0;
+  font-weight: bold;
   margin: 15px 0 4px 0;
-  padding:4px 0 2px;
+  padding: 4px 0 2px;
 }
