ical: fix padding of week selector.

--- a/calendar/ui/style.css
+++ b/calendar/ui/style.css
@@ -19,7 +19,7 @@
 #cal-weekly-view #selector li,
 #cal-daily-view #selector li {
   display: inline;
-  padding: 26px;
+  padding: 0 26px;
 }
 
 #cal-monthly-view #selector li a,
