folder_view: Add the possibiliy to retire several resources.

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -135,6 +135,10 @@ input {
   padding-left: 16px;
 }
 
+.button_retire {
+  background-image: url(icons/16x16/private.png);
+  padding-left: 16px;
+}
 
 /**************************************************************************
  * ui/aruni/location.xml.en
