a last CSS id with underscore

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -135,7 +135,7 @@ input {
   padding-left: 16px;
 }
 
-.button_retire {
+.button-retire {
   background-image: url(icons/16x16/private.png);
   padding-left: 16px;
 }
