Rename 'browse_content' to 'table' and 'preview_content' to 'preview'

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -357,7 +357,7 @@ th a.sort-none {
 
 
 /**************************************************************************
- * folder_views.Folder_BrowseContent
+ * folder_views.Folder_Table
  *************************************************************************/
 
 .workflow { text-decoration: none; }
