Add list view (for folders)

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -357,6 +357,14 @@ th a.sort-none {
 
 
 /**************************************************************************
+ * folder_views.List_Table
+ *************************************************************************/
+
+div.list-view {
+}
+
+
+/**************************************************************************
  * folder_views.Folder_Table
  *************************************************************************/
 
