Copy table style from the "shop" project

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -303,11 +303,17 @@ table.new-resource-thumb {
  * tracker/ui/view_tracker.xml.en
  *************************************************************************/
 
+#browse-list {
+  border-spacing: 0px;
+}
 
 #browse-list thead th {
-  text-align: left;
   background-color: #d3d7cf;
+  border-color: #ddd #aaa #aaa #ddd;
+  border-style: solid;
+  border-width: 1px;
   padding: 0 5px;
+  text-align: left;
 }
 
 #browse-list thead th.checkbox {
@@ -319,7 +325,8 @@ table.new-resource-thumb {
 }
 
 #browse-list tbody td {
-  padding: 3px;
+  border-bottom: 1px solid #DDDDDD;
+  padding: 4px 5px;
   vertical-align: top;
 }
 
@@ -498,10 +505,10 @@ p.tabme a.selected {
 
 
 tr.odd, tr.odd input {
-  background-color: #eeeeec;
+  background-color: #f9f9f9;
 }
 
 tr.odd:hover, tr.even:hover {
-  background-color: #faa;
+  background-color: #e0e0f0;
 }
 
