aruni#818 beautify context menus and forum

--- a/forum/ui/style.css
+++ b/forum/ui/style.css
@@ -16,7 +16,7 @@ p.even, p.odd {
 }
 
 .even .forum-message-info {
-  background-color: #c17d11;
+  background-color: #888a85;
 }
 
 .odd .forum-message-info {
