--- a/ui/bo.css
+++ b/ui/bo.css
@@ -254,7 +254,8 @@ input, button {
   margin: 3px;
   padding: 3px 6px;
   color: #fff;
-  background-color: #c17d11;
+  background-color: #888a85;
+  font-weight: bold;
 }
 
 .context-menu ul {
@@ -304,6 +305,7 @@ table.new-resource-thumb {
   border-width: 1px;
   padding: 0 5px;
   text-align: left;
+  font-size: 0.8em;
 }
 
 #browse-list thead th.checkbox {
