wiki#854 import odt and its structure in a wiki
Almost all of this was written by Alexis Huet but this information is
currently lost.

--- a/wiki/ui/style.css
+++ b/wiki/ui/style.css
@@ -141,3 +141,7 @@ table.docutils.field-list {
 table.docutils.field-list td {
   border: none;
 }
+
+.defaultSkin td .odt_icon {
+  background: url("/ui/icons/16x16/odt.png") no-repeat scroll 3px 3px transparent
+}
