Adopt menu in 0.62

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -499,4 +499,5 @@ p.tabme a.selected {
  * NOT YET CLASSIFIED
  *************************************************************************/
 
+.broken { color: red; }
 .number { text-align: right; }
