--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -19,20 +19,31 @@ legend {
 
 #header {
   text-align: right;
-  background: #729fcf url(images/logo.png) left bottom no-repeat;
+  background: #729fcf;
   color: #fff;
   font-size: 1.2em;
   margin-bottom: 10px;
-  padding: 6px 10px 3px 25px;
+  padding: 6px 10px 3px 10px;
+  position: relative;
+}
+
+/* Minimal height */
+/* All browsers */
+body > #header {
+  min-height: 50px;
+  height: auto;
+}
+
+/* IE 6 & <*/
+* html #header{
+  height: 50px;
 }
 
 #header a {
-  background-position: left center;
-  background-repeat: no-repeat;
   color: white;
   font-size: 1.2em;
-  margin: 0px 0px 0px 0px;
-  padding: 4px 2px 4px 2px;
+  margin: 0px;
+  padding: 4px 2px;
   text-decoration: none;
 }
 
@@ -44,49 +55,100 @@ legend {
   text-decoration: underline;
 }
 
-#header #languages {
-  margin-bottom: 12px;
+#header #links {
+  padding: 4px;
+  position: absolute;
+  left: 10px;
+  top: 0;
 }
 
-#header #languages a {
-  font-size: 1.1em;
+#header #links a {
+  background-position: left center;
+  background-repeat: no-repeat;
+  color: #fff;
+  margin: 0 0 0 10px;
+  padding: 4px 0 4px 19px;
+}
+
+#header #links-menu-login {
+  background-image: url("../icons/16x16/lock.png");
+}
+
+#header #links-menu-profile {
+  background-image: url("../icons/16x16/action_home.png");
+}
+
+#header #links-menu-register {
+  background-image: url("../icons/16x16/card.png");
+}
+
+#header #links-menu-logout {
+  background-image: url("../icons/16x16/action_logout.png");
 }
 
 #header #languages a.selected {
   font-weight: bold;
 }
 
-#header #top-menu a {
-  margin: 0px 0px 0px 10px;
-  padding: 4px 0px 4px 19px;
+#header #logo {
+  padding-top: 35px;
+  float: left;
 }
 
-#header a#top-menu-login {
-  background-image: url(../icons/16x16/lock.png);
+/* header toolbar */
+#header .header-toolbar {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin-top: 4px; /* same as links */
 }
 
-#header a#top-menu-register {
-  background-image: url(../icons/16x16/card.png);
+#header .header-toolbar td {
+  padding: 0 4px;
 }
 
-#header a#top-menu-home {
-  background-image: url(../icons/16x16/action_home.png);
+#header .header-toolbar .search form {
+  margin: 0;
 }
 
-#header a#top-menu-profile {
-  background-image: url(../icons/16x16/action_home.png);
+#header .button-search {
+  background: #fff;
+  padding-left: 0;
 }
 
-#header a#top-menu-logout {
-  background-image: url(../icons/16x16/action_logout.png);
+#header #menu {
+  margin: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding-right: 10px;
 }
 
-#header a#top-menu-search {
-  background-image: url(../icons/16x16/search.png);
+#header #menu li {
+  float: left;
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
+  margin-right: 4px;
 }
 
-#header a#top-menu-contact {
-  background-image: url(../icons/16x16/mail.png);
+#header #menu li a {
+  -moz-border-radius: 5px 5px 0 0;
+  -webkit-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+
+  display: block;
+  font-size: 1em;
+  padding: 5px 15px;
+  text-decoration: none;
+  background: #888A85;
+  color: #fff;
+}
+
+#header #menu li a:hover,
+#header #menu li.in-path a {
+  background: #fff;
+  color: #333;
 }
 
 #content {
