--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -66,7 +66,7 @@ body > #header {
   background-position: left center;
   background-repeat: no-repeat;
   color: #fff;
-  margin: 0 0 0 10px;
+  margin: 0 10px 0 0;
   padding: 4px 0 4px 19px;
 }
 
