Improve header color

--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -35,7 +35,7 @@ div#page {
 
 #header {
   text-align: right;
-  background: #729fcf;
+  background: #0369a8;
   color: #fff;
   font-size: 1.2em;
   margin-bottom: 10px;
