aruni: Do not set gray background to tinymce editor

--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -21,6 +21,10 @@ body {
   background: #aaa;
 }
 
+body.mceContentBody {
+  background: #fff;
+}
+
 div#page {
   background: #fff;
   border-radius: 0 0 10px 10px;
