--- a/ui/aruni/style.css
+++ b/ui/aruni/style.css
@@ -138,15 +138,12 @@ div#page {
   padding-right: 10px;
 }
 
-#header #menu li {
+#header #menu div {
   float: left;
-  list-style-image: none;
-  list-style-position: outside;
-  list-style-type: none;
   margin-right: 4px;
 }
 
-#header #menu li a {
+#header #menu div a {
   background: #777;
   border-radius: 5px 5px 0 0;
   -moz-border-radius: 5px 5px 0 0;
@@ -158,8 +155,8 @@ div#page {
   text-decoration: none;
 }
 
-#header #menu li a:hover,
-#header #menu li.in-path a {
+#header #menu div a:hover,
+#header #menu div.in-path a {
   background: #fff;
   color: #333;
 }
