ui/bo: Remove border around checkbox/radio buttons under IE7

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -18,6 +18,12 @@ button, input, select, textarea {
   font-size: 1.0em;
 }
 
+/* IE7 fix */
+input[type=radio],
+input[type=checkbox] {
+  border: none;
+}
+
 button:focus, input:focus, select:focus, textarea:focus {
   border-color: black;
 }
