--- a/ui/bo.css
+++ b/ui/bo.css
@@ -528,3 +528,8 @@ p.tabme a.selected {
 #autoform input, #autoform textarea {
   width: 92%;
 }
+
+#autoform input[type=radio],
+#autoform input[type=checkbox] {
+  width: auto;
+}
