sign-in: add javascript to disable password

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -18,6 +18,11 @@ button, input, select, textarea {
   font-size: 1.0em;
 }
 
+input[disabled] {
+  background-color: #eee;
+  color: #eee;
+}
+
 /* IE7 fix */
 input[type=radio],
 input[type=checkbox] {
