Better multilingual edit form
Now it is possible to edit mulitple languages at once.

API changes:

- Now 'get_value' must return a dict for multilingual fields.

- Now 'set_value' takes a dict for multilingual fields.

- The 'get_content_language' method has been replaced by
  'get_edit_languages'

(This commit is based on work by Henry Obein.)

--- a/ui/bo.css
+++ b/ui/bo.css
@@ -541,6 +541,11 @@ p.tabme a.selected {
 .broken { color: red; }
 .number { text-align: right; }
 
+#autoform .language {
+  font-size: 0.8em;
+  margin-left: 5px;
+}
+
 #autoform input, #autoform textarea {
   width: 92%;
 }
