--- a/ui/bo.css
+++ b/ui/bo.css
@@ -551,6 +551,10 @@ p.tabme a.selected {
 .broken { color: red; }
 .number { text-align: right; }
 
+#autoform .title {
+  font-weight: bold;
+}
+
 #autoform .language {
   font-size: 0.8em;
   margin-left: 5px;
